@@ -1,3 +1,11 @@
+2006-07-31  Fred Fish  <fnf@specifix.com>
+
+	* arm-tdep.c (arm_make_prologue_cache): Use FRAME_OBSTACK_ZALLOC
+	instead of calling frame_obstack_zalloc directly.
+	(arm_make_stub_cache): Ditto.
+	* frame-unwind.h: Ditto.
+	* frame.c (create_new_frame): Ditto.
+
 2006-07-27  Bob Wilson  <bob.wilson@acm.org>
 
 	* MAINTAINERS (Write After Approval): Add myself.
